--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@
     padding: 0px;
 }
 
-body{
-    background-image: linear-gradient(to right, pink , rgb(245, 233, 172));
-}
 header{
     margin: 2px;
     border: 2px solid black;
@@ -15,7 +12,9 @@ header{
 }
 
 #frame{
-    background-image: linear-gradient(to right, rgb(251, 79, 79), rgb(255, 190, 77), rgb(250, 104, 104));
+    background-image: linear-gradient(to right, rgb(147, 255, 246), rgb(251, 230, 124));
+    border: 3px solid black;
+    margin: 1px;
 }
 #profilePic{
     display: flex;
@@ -25,8 +24,9 @@ header{
 #pic{
     border-radius: 50%;
     height: 150px;
-    border: 3px solid black;
+    border: 1px solid black;
     margin: 20px 0px 0px 0px;
+    box-shadow: 0px 0px 75px 25px rgb(5, 255, 163);
 }
 
 #name{
@@ -34,6 +34,24 @@ header{
     font-size: 20px;
     padding: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: underline;
+    text-shadow: 5px 3px 4px rgb(5, 255, 163);
+}
+
+#collage{
+    display: flex;
+    align-items: center;
+    border: 3px solid black;
+    background-image: linear-gradient(to right, rgb(233, 173, 173) , rgb(245, 233, 172));
+}
+#collage div{
+    width: 50%;
+}
+
+#img_004{
+    display: flex;
+    mix-blend-mode:multiply;
+    justify-content: center;
 }
 
 #contactLinks{
@@ -42,6 +60,10 @@ header{
     gap: 10px;
     background-image: linear-gradient(rgb(243, 130, 130), rgb(238, 225, 141));
     border: 2px solid blanchedalmond;
+    position:relative;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
 }
 
 .contactLink{
@@ -59,7 +81,7 @@ header{
 }
 
 footer{
-    position: absolute;
+    position: relative;
     bottom: 0px;
     right: 0px;
     left: 0px;
